--- a/_pugfiles/main.pug
+++ b/_pugfiles/main.pug
@@ -3,8 +3,15 @@
 		.row-1-box-1-invi
 		.row-1-box-1
 		.row-1-box-2
-			h1 Hyderabad, In
-		.row-1-box-2-invi
+			h1.location Hyderabad, In
+			.weather-detail
+				.condition
+				h1.temp-large 22˚
+				ul.toggle
+					li.toggle-c C 
+					li /
+					li.toggle-f  F
+		
 	
 	.row2
 		.row-2-box-1
