--- a/_pugfiles/main.pug
+++ b/_pugfiles/main.pug
@@ -3,29 +3,33 @@
 		.row-1-box-1-invi
 		.row-1-box-1
 		.row-1-box-2
-			h1.location Hyderabad, In
+			h1.location
 			.weather-detail
 				.condition
-				h1.temp-large 22˚
+				h1.temp-large
 				ul.toggle
-					li.toggle-c C 
+					li.toggle-c C
 					li /
 					li.toggle-f  F
-		
-	
+
+
 	.row2
 		.row-2-box-1
-			.prog-bar
+			.image
+				.prog-bar
 		.row-2-box-2
 		.row-2-box-3
-			.prog-bar
+			.image
+				.prog-bar
 
 	.row3
 		.row-3-box-1
-			.prog-bar
+			.image
+				.prog-bar
 		.row-3-box-1-invi-1
 		.row-3-box-2
-			.prog-bar
+			.image
+				.prog-bar
 		.row-3-box-3
-			.prog-bar
-		
+			.image
+				.prog-bar
