--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,3 +1,5 @@
-
-@import "styles/style";
 @import 'https://fonts.googleapis.com/css?family=Fira+Sans';
+
+@import 'styles/style';
+@import 'styles/animate';
+@import 'styles/master';
