--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -26,13 +26,17 @@
         -ms-flex-direction: column;
             flex-direction: column;
     width: 80%;
-    height: 65%;
+    height: 75%;
     background-image: url(../images/earthnight.png);
     background-size: cover;
     background-repeat: no-repeat; }
+    @media (max-width: 640px) {
+      .main-wrapper .inner-wrapper {
+        width: 100%;
+        height: 100%; } }
     .main-wrapper .inner-wrapper .row1, .main-wrapper .inner-wrapper .row2, .main-wrapper .inner-wrapper .row3 {
       width: 100%;
-      height: 22vh;
+      height: 33.33%;
       display: -webkit-box;
       display: -webkit-flex;
       display: -ms-flexbox;
@@ -47,10 +51,9 @@
         .main-wrapper .inner-wrapper .row1 .row-1-box-1-invi {
           display: none; } }
     .main-wrapper .inner-wrapper .row1 .row-1-box-1 {
-      background-color: #07bac5;
+      background-color: #0fffd4;
       height: 100%;
-      width: 20%;
-      opacity: 0.75; }
+      width: 20%; }
       @media (max-width: 900px) {
         .main-wrapper .inner-wrapper .row1 .row-1-box-1 {
           width: 25%; } }
@@ -82,14 +85,12 @@
         color: white;
         text-align: center;
         font-family: "Fira Sans";
-        font-size: 1.8em;
-        font-weight: normal; }
-        @media (max-width: 640px) {
+        font-size: 1.5em;
+        font-weight: normal;
+        margin-top: 10px; }
+        @media only screen and (max-width: 640px) and (orientation: portrait) {
           .main-wrapper .inner-wrapper .row1 .row-1-box-2 h1.location {
-            font-size: 1.5em; } }
-        @media (max-width: 540px) {
-          .main-wrapper .inner-wrapper .row1 .row-1-box-2 h1.location {
-            font-size: 1.2em; } }
+            margin-top: 50px; } }
       .main-wrapper .inner-wrapper .row1 .row-1-box-2 .weather-detail {
         display: -webkit-box;
         display: -webkit-flex;
@@ -135,59 +136,24 @@
             .main-wrapper .inner-wrapper .row1 .row-1-box-2 .weather-detail ul li {
               font-size: 0.75em; } }
     .main-wrapper .inner-wrapper .row2 .row-2-box-1 {
-      display: -webkit-box;
-      display: -webkit-flex;
-      display: -ms-flexbox;
-      display: flex;
-      -webkit-box-orient: vertical;
-      -webkit-box-direction: normal;
-      -webkit-flex-direction: column;
-          -ms-flex-direction: column;
-              flex-direction: column;
       height: 100%;
-      width: 40%;
-      background-image: url(../images/night_milky.jpg);
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat; }
-      .main-wrapper .inner-wrapper .row2 .row-2-box-1 .prog-bar {
-        height: 2px;
-        width: 100%;
-        background-color: white; }
-      @media (max-width: 540px) {
+      width: 40%; }
+      @media (max-width: 440px) {
         .main-wrapper .inner-wrapper .row2 .row-2-box-1 {
           display: none; } }
     .main-wrapper .inner-wrapper .row2 .row-2-box-2 {
       width: 40%;
       height: 100%;
-      background-color: #aa0470;
-      opacity: 0.75; }
+      background-color: #ff138b; }
       @media (max-width: 900px) {
         .main-wrapper .inner-wrapper .row2 .row-2-box-2 {
           width: 60%; } }
-      @media (max-width: 540px) {
+      @media (max-width: 440px) {
         .main-wrapper .inner-wrapper .row2 .row-2-box-2 {
           width: 100%; } }
     .main-wrapper .inner-wrapper .row2 .row-2-box-3 {
-      display: -webkit-box;
-      display: -webkit-flex;
-      display: -ms-flexbox;
-      display: flex;
-      -webkit-box-orient: vertical;
-      -webkit-box-direction: normal;
-      -webkit-flex-direction: column;
-          -ms-flex-direction: column;
-              flex-direction: column;
       width: 20%;
-      height: 100%;
-      background-image: url(../images/deer_silhou.png);
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat; }
-      .main-wrapper .inner-wrapper .row2 .row-2-box-3 .prog-bar {
-        height: 2px;
-        width: 100%;
-        background-color: white; }
+      height: 100%; }
       @media (max-width: 900px) {
         .main-wrapper .inner-wrapper .row2 .row-2-box-3 {
           display: none; } }
@@ -197,22 +163,14 @@
       @media (max-width: 900px) {
         .main-wrapper .inner-wrapper .row3 .row-3-box-1-invi-1 {
           width: 40%; } }
-      @media (max-width: 540px) {
+      @media (max-width: 440px) {
         .main-wrapper .inner-wrapper .row3 .row-3-box-1-invi-1 {
           display: none; } }
     .main-wrapper .inner-wrapper .row3 .row-3-box-1 {
       display: none;
-      background-image: url(../images/night_milky.jpg);
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
       height: 100%;
       width: 40%; }
-      .main-wrapper .inner-wrapper .row3 .row-3-box-1 .prog-bar {
-        height: 2px;
-        width: 100%;
-        background-color: white; }
-      @media (max-width: 540px) {
+      @media (max-width: 440px) {
         .main-wrapper .inner-wrapper .row3 .row-3-box-1 {
           display: -webkit-box;
           display: -webkit-flex;
@@ -225,49 +183,24 @@
                   flex-direction: column;
           width: 100%; } }
     .main-wrapper .inner-wrapper .row3 .row-3-box-2 {
-      display: -webkit-box;
-      display: -webkit-flex;
-      display: -ms-flexbox;
-      display: flex;
-      -webkit-box-orient: vertical;
-      -webkit-box-direction: normal;
-      -webkit-flex-direction: column;
-          -ms-flex-direction: column;
-              flex-direction: column;
       width: 20%;
-      height: 100%;
-      background-image: url(../images/deer.jpg);
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat; }
-      .main-wrapper .inner-wrapper .row3 .row-3-box-2 .prog-bar {
-        height: 2px;
-        width: 100%;
-        background-color: white; }
+      height: 100%; }
       @media (max-width: 900px) {
         .main-wrapper .inner-wrapper .row3 .row-3-box-2 {
           width: 30%; } }
-      @media (max-width: 540px) {
+      @media (max-width: 440px) {
         .main-wrapper .inner-wrapper .row3 .row-3-box-2 {
           display: none; } }
     .main-wrapper .inner-wrapper .row3 .row-3-box-1-invi-2 {
       width: 20%;
       height: 100%; }
-      @media (max-width: 540px) {
+      @media (max-width: 440px) {
         .main-wrapper .inner-wrapper .row3 .row-3-box-1-invi-2 {
           display: none; } }
     .main-wrapper .inner-wrapper .row3 .row-3-box-3 {
       display: none;
       width: 20%;
-      height: 100%;
-      background-image: url(../images/deer_silhou.png);
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat; }
-      .main-wrapper .inner-wrapper .row3 .row-3-box-3 .prog-bar {
-        height: 2px;
-        width: 100%;
-        background-color: white; }
+      height: 100%; }
       @media (max-width: 900px) {
         .main-wrapper .inner-wrapper .row3 .row-3-box-3 {
           display: -webkit-box;
@@ -280,6 +213,78 @@
               -ms-flex-direction: column;
                   flex-direction: column;
           width: 30%; } }
-      @media (max-width: 540px) {
+      @media (max-width: 440px) {
         .main-wrapper .inner-wrapper .row3 .row-3-box-3 {
           display: none; } }
+
+.row-1-box-1, .row-2-box-2 {
+  opacity: 0.8; }
+
+.row-2-box-1, .row-2-box-3, .row-3-box-1, .row-3-box-2, .row-3-box-3 {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column; }
+
+.row-2-box-1 .image {
+  height: 100%;
+  width: 100%;
+  background-image: url("https://source.unsplash.com/collection/366934/400x300");
+  background-size: cover;
+  background-repeat: no-repeat; }
+
+.row-2-box-3 .image {
+  height: 100%;
+  width: 100%;
+  background-image: url("https://source.unsplash.com/collection/368888/400x300");
+  background-size: cover;
+  background-repeat: no-repeat; }
+
+.row-3-box-1 .image {
+  height: 100%;
+  width: 100%;
+  background-image: url("https://source.unsplash.com/collection/366934/400x300");
+  background-size: cover;
+  background-repeat: no-repeat; }
+
+.row-3-box-2 .image {
+  height: 100%;
+  width: 100%;
+  background-image: url("https://source.unsplash.com/collection/368890/400x300");
+  background-size: cover;
+  background-repeat: no-repeat; }
+
+.row-3-box-3 .image {
+  height: 100%;
+  width: 100%;
+  background-image: url("https://source.unsplash.com/collection/368888/400x300");
+  background-size: cover;
+  background-repeat: no-repeat; }
+
+.prog-bar {
+  height: 1px;
+  width: 100%;
+  background: white; }
+
+.progress-bar {
+  -webkit-animation-name: growProgressBar;
+  -webkit-animation-duration: 7s;
+  -webkit-animation-fill-mode: forwards;
+  -webkit-animation-play-state: running;
+  -webkit-animation-iteration-count: infinite; }
+
+@-webkit-keyframes growProgressBar {
+  0% {
+    width: 0%;
+    background-color: white; }
+  100% {
+    width: 100%;
+    background-color: white; } }
+
+body {
+  margin: 0; }
