--- a/assets/css/styles/_style.sass
+++ b/assets/css/styles/_style.sass
@@ -7,24 +7,26 @@
 	display: flex
 	align-items: center
 	justify-content: center
-	
+
 	.inner-wrapper
 		display: flex
 		flex-direction: column
 		width: 80%
-		height: 65%
+		height: 75%
 		background:
 			image: url(../images/earthnight.png)
 			size: cover
 			repeat: no-repeat
-
-
-		
-		.row1, .row2, .row3					
+		@media (max-width: 640px)
 			width: 100%
-			height: 22vh
+			height: 100%
+
+
+		.row1, .row2, .row3
+			width: 100%
+			height: 33.33%
 			display: flex
-			
+
 
 		.row1
 			.row-1-box-1-invi
@@ -35,10 +37,9 @@
 				@media (max-width: 540px)
 					display: none
 			.row-1-box-1
-				background-color: #07bac5
+				background-color: #0fffd4
 				height: 100%
 				width: 20%
-				opacity: 0.75
 				@media (max-width: 900px)
 					width: 25%
 				@media (max-width: 540px)
@@ -49,11 +50,9 @@
 				align-items: center
 				width: 60%
 				height: 100%
-
-				
 				h1
 					padding: 0
-					margin: 0 
+					margin: 0
 					bottom: 0
 					top: 0
 
@@ -61,19 +60,18 @@
 					color: white
 					text-align: center
 					font-family: "Fira Sans"
-					font-size: 1.8em
+					font-size: 1.5em
 					font-weight: normal
-					@media (max-width: 640px)
-						font-size: 1.5em
-					@media (max-width: 540px)
-						font-size: 1.2em
-				
+					margin-top: 10px
+					@media only screen and (max-width: 640px) and (orientation: portrait)
+						margin-top: 50px
+
 				.weather-detail
 					display: flex
 					flex-direction: row
 					justify-content: space-in-between
 					align-items: center
-							
+
 					.condition
 						width: 40px
 						height: 40px
@@ -81,7 +79,7 @@
 							image: url(../images/cloudy.png)
 							repeat: no-repeat
 							size: contain
-						
+
 					h1.temp-large
 						color: white
 						text-align: center
@@ -106,45 +104,22 @@
 
 		.row2
 			.row-2-box-1
-				display: flex
-				flex-direction: column
 				height: 100%
 				width: 40%
-				.prog-bar
-					height: 2px
-					width: 100%
-					background-color: white
-				background:
-					image: url(../images/night_milky.jpg)
-					size: cover
-					position: center
-					repeat: no-repeat
-				@media (max-width: 540px)
+				@media (max-width: 440px)
 					display: none
 
 			.row-2-box-2
 				width: 40%
 				height: 100%
-				background-color: #aa0470
-				opacity: 0.75
+				background-color: #ff138b
 				@media (max-width: 900px)
 					width: 60%
-				@media (max-width: 540px)
+				@media (max-width: 440px)
 					width: 100%
 			.row-2-box-3
-				display: flex
-				flex-direction: column
-				.prog-bar
-					height: 2px
-					width: 100%
-					background-color: white
 				width: 20%
 				height: 100%
-				background:
-					image: url(../images/deer_silhou.png)
-					size: cover
-					position: center
-					repeat: no-repeat
 				@media (max-width: 900px)
 					display: none
 
@@ -154,71 +129,110 @@
 				height: 100%
 				@media (max-width: 900px)
 					width: 40%
-				@media (max-width: 540px)
+				@media (max-width: 440px)
 					display: none
 			.row-3-box-1
 				display: none
-				background:
-					image: url(../images/night_milky.jpg)
-					size: cover
-					position: center
-					repeat: no-repeat
 				height: 100%
-				width: 40%	
-				.prog-bar
-					height: 2px
-					width: 100%
-					background-color: white
-				@media (max-width: 540px)
+				width: 40%
+				@media (max-width: 440px)
 					display: flex
 					flex-direction: column
 					width: 100%
 			.row-3-box-2
-				display: flex
-				flex-direction: column
-				.prog-bar
-					height: 2px
-					width: 100%
-					background-color: white
 				width: 20%
 				height: 100%
-				background:
-					image: url(../images/deer.jpg)
-					size: cover
-					position: center
-					repeat: no-repeat
 				@media (max-width: 900px)
 					width: 30%
-				@media (max-width: 540px)
+				@media (max-width: 440px)
 					display: none
-				
+
 			.row-3-box-1-invi-2
 				width: 20%
 				height: 100%
-				@media (max-width: 540px)
+				@media (max-width: 440px)
 					display: none
-			
+
 			.row-3-box-3
 				display: none
 				width: 20%
 				height: 100%
-				.prog-bar
-					height: 2px
-					width: 100%
-					background-color: white
-				background:
-					image: url(../images/deer_silhou.png)
-					size: cover
-					position: center
-					repeat: no-repeat
+
 				@media (max-width: 900px)
 					display: flex
 					flex-direction: column
 					width: 30%
-				@media (max-width: 540px)
+				@media (max-width: 440px)
 					display: none
 
-			
-		
-			
-		
+.row-1-box-1, .row-2-box-2
+	opacity: 0.8
+
+.row-2-box-1, .row-2-box-3, .row-3-box-1, .row-3-box-2, .row-3-box-3
+	display: flex
+	flex-direction: column
+
+.row-2-box-1
+	.image
+		height: 100%
+		width: 100%
+		background:
+			image: url('https://source.unsplash.com/collection/366934/400x300')
+			size: cover
+			repeat: no-repeat
+.row-2-box-3
+	.image
+		height: 100%
+		width: 100%
+		background:
+			image: url('https://source.unsplash.com/collection/368888/400x300')
+			size: cover
+			repeat: no-repeat
+.row-3-box-1
+	.image
+		height: 100%
+		width: 100%
+		background:
+			image: url('https://source.unsplash.com/collection/366934/400x300')
+			size: cover
+			repeat: no-repeat
+.row-3-box-2
+	.image
+		height: 100%
+		width: 100%
+		background:
+			image: url('https://source.unsplash.com/collection/368890/400x300')
+			size: cover
+			repeat: no-repeat
+.row-3-box-3
+	.image
+		height: 100%
+		width: 100%
+		background:
+			image: url('https://source.unsplash.com/collection/368888/400x300')
+			size: cover
+			repeat: no-repeat
+
+.prog-bar
+	height: 1px
+	width: 100%
+	background: white
+
+
+.progress-bar
+	-webkit-animation-name: growProgressBar
+	-webkit-animation-duration: 7s
+	-webkit-animation-fill-mode: forwards
+	-webkit-animation-play-state: running
+	-webkit-animation-iteration-count: infinite
+
+
+@-webkit-keyframes growProgressBar
+  0%
+    width: 0%
+    background-color: white
+
+
+  100%
+    width: 100%
+    background-color: white
