--- a/_pugfiles/main.pug
+++ b/_pugfiles/main.pug
@@ -15,21 +15,23 @@
 
 	.row2
 		.row-2-box-1
-			.image
-				.prog-bar
+			.prog-bar
+			image.image(src=('https://source.unsplash.com/collection/366934/400x300'))
+
 		.row-2-box-2
 		.row-2-box-3
-			.image
-				.prog-bar
+			.prog-bar
+			image.image(src=('https://source.unsplash.com/collection/368888/400x300'))
+
 
 	.row3
 		.row-3-box-1
-			.image
-				.prog-bar
+			.prog-bar
+			image.image(src=('https://source.unsplash.com/collection/366934/400x300'))
 		.row-3-box-1-invi-1
 		.row-3-box-2
-			.image
-				.prog-bar
+			.prog-bar
+			image.image(src=('https://source.unsplash.com/collection/368890/400x300'))
 		.row-3-box-3
-			.image
-				.prog-bar
+			.prog-bar
+			image.image(src=('https://source.unsplash.com/collection/368888/400x300'))
