--- a/assets/css/styles/_style.sass
+++ b/assets/css/styles/_style.sass
@@ -172,58 +172,25 @@
 	display: flex
 	flex-direction: column
 
-.row-2-box-1
+.row-2-box-1, .row-2-box-3, .row-3-box-1, .row-3-box-2, .row-3-box-3
 	.image
 		height: 100%
 		width: 100%
-		background:
-			image: url('https://source.unsplash.com/collection/366934/400x300')
-			size: cover
-			repeat: no-repeat
-.row-2-box-3
-	.image
-		height: 100%
-		width: 100%
-		background:
-			image: url('https://source.unsplash.com/collection/368888/400x300')
-			size: cover
-			repeat: no-repeat
-.row-3-box-1
-	.image
-		height: 100%
-		width: 100%
-		background:
-			image: url('https://source.unsplash.com/collection/366934/400x300')
-			size: cover
-			repeat: no-repeat
-.row-3-box-2
-	.image
-		height: 100%
-		width: 100%
-		background:
-			image: url('https://source.unsplash.com/collection/368890/400x300')
-			size: cover
-			repeat: no-repeat
-.row-3-box-3
-	.image
-		height: 100%
-		width: 100%
-		background:
-			image: url('https://source.unsplash.com/collection/368888/400x300')
-			size: cover
-			repeat: no-repeat
+	position: relative
 
 .prog-bar
 	height: 1px
 	width: 100%
 	background: white
+	position: absolute
+
 
 
 .progress-bar
 	-webkit-animation-name: growProgressBar
-	-webkit-animation-duration: 7s
+	-webkit-animation-duration: 10s
 	-webkit-animation-fill-mode: forwards
-	-webkit-animation-play-state: running
+	-webkit-animation-play-state: paused
 	-webkit-animation-iteration-count: infinite
 
 
