--- a/assets/css/styles/_style.sass
+++ b/assets/css/styles/_style.sass
@@ -37,70 +37,112 @@
 				@media (max-width: 540px)
 					display: none
 			.row-1-box-1
-				background-color: #0fffd4
 				height: 100%
 				width: 20%
+				overflow-y: scroll
+				background-color: #057972
+				&::-webkit-scrollbar
+					width: 1px
+
+				&::-webkit-scrollbar-thumb
+					background: white
+				.blur
+					display: flex
+					width: 100%
+					height: 100%
+
+					.parameters
+						display: flex
+						flex-direction: column
+						justify-content: space-between
+
+						width: 100%
+						height: 100%
+						ul
+							list-style-type: none
+							text-align: right
+							font-size: 0.7em
+							font-family: "Fira Sans"
+							color: white
+							margin-left: 10px
+							//margin-top: 0
+							margin-bottom: 5px
+							padding-left: 0
+					.values
+						display: flex
+						flex-direction: column
+						justify-content: space-between
+						width: 100%
+						height: 100%
+						ul
+							list-style-type: none
+							font-size: 0.7em
+							font-family: "Fira Sans"
+							color: white
+							margin-left: 10px
+							//margin-top: 0
+							margin-bottom: 5px
+							padding-left: 0
+
+
 				@media (max-width: 900px)
 					width: 25%
 				@media (max-width: 540px)
 					width: 40%
 			.row-1-box-2
-				display: flex
-				flex-direction: column
-				align-items: center
 				width: 60%
 				height: 100%
-				h1
-					padding: 0
-					margin: 0
-					bottom: 0
-					top: 0
-
-				h1.location
-					color: white
-					text-align: center
-					font-family: "Fira Sans"
-					font-size: 1.5em
-					font-weight: normal
-					margin-top: 10px
-					@media only screen and (max-width: 640px) and (orientation: portrait)
-						margin-top: 50px
-
 				.weather-detail
 					display: flex
-					flex-direction: row
-					justify-content: space-in-between
+					flex-direction: column
+					justify-content: center
 					align-items: center
+					width: 100%
+					height: 100%
+					ul
+						list-style-type: none
 
-					.condition
-						width: 40px
-						height: 40px
-						background:
-							image: url(../images/cloudy.png)
-							repeat: no-repeat
-							size: contain
 
-					h1.temp-large
+					li.location
+						color: white
+						text-align: center
+						font-family: "Fira Sans"
+						font-size: 1.5em
+						font-weight: normal
+						//margin-top: 5%
+						margin-bottom: 0
+						padding: 0
+						bottom: 0
+						top: 0
+						@media only screen and (max-width: 640px) and (orientation: portrait)
+							margin-top: 50px
+
+					li.temp-large
 						color: white
 						text-align: center
 						font-family: "Fira Sans"
 						font-size: 2.5em
 						font-weight: normal
-						padding-left: 30px
+						margin-left: 20px
+						margin-right: 10px
+
 						@media (max-width: 640px)
 							padding-left: 10px
 
-					ul
-						list-style: none
+					ul.toggle
+						list-style-type: none
 						padding-left: 0
 						margin-bottom: 0
+						font-family: "Fira Sans"
 						li
 							display: inline
 							color: white
+							cursor: pointer
+					li
+						image.condition
+							width: 50px
+							height: 50px
 
-						@media (max-width: 640px)
-							li
-								font-size: 0.75em
 
 		.row2
 			.row-2-box-1
@@ -110,9 +152,19 @@
 					display: none
 
 			.row-2-box-2
+				display: flex
+				align-items: center
+				justify-content: center
 				width: 40%
 				height: 100%
-				background-color: #ff138b
+				background-color: #ac1a64
+				h1
+					color: white
+					font-family: "Fira Sans"
+					font-size: 0.8em
+					line-height: 1.6em
+					padding: 5px
+					margin: 5px
 				@media (max-width: 900px)
 					width: 60%
 				@media (max-width: 440px)
@@ -166,7 +218,7 @@
 					display: none
 
 .row-1-box-1, .row-2-box-2
-	opacity: 0.8
+	opacity: 0.9
 
 .row-2-box-1, .row-2-box-3, .row-3-box-1, .row-3-box-2, .row-3-box-3
 	display: flex
@@ -184,8 +236,6 @@
 	background: white
 	position: absolute
 
-
-
 .progress-bar
 	-webkit-animation-name: growProgressBar
 	-webkit-animation-duration: 10s
@@ -198,7 +248,6 @@
   0%
     width: 0%
     background-color: white
-
 
   100%
     width: 100%
