--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -313,7 +313,7 @@
   -webkit-animation-name: growProgressBar;
   -webkit-animation-duration: 10s;
   -webkit-animation-fill-mode: forwards;
-  -webkit-animation-play-state: paused;
+  -webkit-animation-play-state: running;
   -webkit-animation-iteration-count: infinite; }
 
 @-webkit-keyframes growProgressBar {
