--- a/_pugfiles/main.pug
+++ b/_pugfiles/main.pug
@@ -40,9 +40,9 @@
 		.row-1-box-2
 			.weather-detail
 				ul
-					li.location
+					li.location Location
 					ul.toggle
-						li.temp-large
+						li.temp-large __
 						li.centigrade C
 						li  |
 						li.fahrenhiet  F
