--- a/_pugfiles/main.pug
+++ b/_pugfiles/main.pug
@@ -42,7 +42,7 @@
 				ul
 					li.location Location
 					ul.toggle
-						li.temp-large __
+						li.temp-large __°
 						li.centigrade C
 						li  |
 						li.fahrenhiet  F
