--- a/_pugfiles/main.pug
+++ b/_pugfiles/main.pug
@@ -41,11 +41,9 @@
 			.weather-detail
 				ul
 					li.location Location
-					ul.toggle
+					ul
 						li.temp-large __°
-						li.centigrade C
-						li  |
-						li.fahrenhiet  F
+						button.toggle C
 					li
 						image.condition
 
