--- a/assets/css/styles/_style.sass
+++ b/assets/css/styles/_style.sass
@@ -46,6 +46,7 @@
 
 				&::-webkit-scrollbar-thumb
 					background: white
+
 				.blur
 					display: flex
 					width: 100%
@@ -63,9 +64,9 @@
 							text-align: right
 							font-size: 0.7em
 							font-family: "Fira Sans"
+							font-weight: bold
 							color: white
 							margin-left: 10px
-							//margin-top: 0
 							margin-bottom: 5px
 							padding-left: 0
 					.values
@@ -78,9 +79,9 @@
 							list-style-type: none
 							font-size: 0.7em
 							font-family: "Fira Sans"
+							font-weight: bold
 							color: white
 							margin-left: 10px
-							//margin-top: 0
 							margin-bottom: 5px
 							padding-left: 0
 
@@ -101,43 +102,45 @@
 					height: 100%
 					ul
 						list-style-type: none
-
-
-					li.location
-						color: white
-						text-align: center
-						font-family: "Fira Sans"
-						font-size: 1.5em
-						font-weight: normal
-						//margin-top: 5%
-						margin-bottom: 0
-						padding: 0
-						bottom: 0
-						top: 0
-						@media only screen and (max-width: 640px) and (orientation: portrait)
-							margin-top: 50px
-
-					li.temp-large
-						color: white
-						text-align: center
-						font-family: "Fira Sans"
-						font-size: 2.5em
-						font-weight: normal
-						margin-left: 20px
-						margin-right: 10px
-
-						@media (max-width: 640px)
-							padding-left: 10px
-
-					ul.toggle
-						list-style-type: none
-						padding-left: 0
-						margin-bottom: 0
-						font-family: "Fira Sans"
+						li.location
+							color: white
+							text-align: center
+							font-family: "Fira Sans"
+							font-size: 1.5em
+							font-weight: normal
+							margin-bottom: 0
+							padding: 0
+							bottom: 0
+							top: 0
+							@media only screen and (max-width: 640px) and (orientation: portrait)
+								margin-top: 50px
+						ul
+							list-style-type: none
+							padding-left: 0
+							margin-bottom: 0
+							font-family: "Fira Sans"
 						li
 							display: inline
 							color: white
+						li.temp-large
+							color: white
+							text-align: center
+							font-family: "Fira Sans"
+							font-size: 2.5em
+							font-weight: normal
+							margin-left: 20px
+							margin-right: 0
+							@media (max-width: 640px)
+								padding-left: 10px
+						.toggle
 							cursor: pointer
+							width: 25px
+							height: 25px
+							font-size: 1.2em
+							border: none
+							outline: none
+							background-color: white
+
 					li
 						image.condition
 							width: 50px
